@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.634 2008-04-14 12:53:20 mh Exp $
+# $Id: CHANGES,v 1.635 2008-04-18 09:20:49 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,7 @@
 # --
 
 CVS HEAD (????/??/??)
+ - (2007/04/18) Added Title-Attribute (for Tooltips) to BuildSelection.
  - (2007/04/14) Increased db2 BLOB size from 20M to 30M in
     scripts/database/otrs-schema.db2.sql.
  - (2007/04/14) Improved admin interface, show only links with own permissions.
